packages/kyvernoPolicies/chart/tests/vpol/restrict-external-ips-cel/kyverno-test/resource.yaml
###### Services - Bad
---
apiVersion: v1
kind: Service
metadata:
  name: bad-disallowed-ip
spec:
  selector:
    app: test
  ports:
  - port: 80
  externalIPs:
  - 192.168.0.2
---
###### Services - Good
apiVersion: v1
kind: Service
metadata:
  name: good-allowed-ip
spec:
  selector:
    app: test
  ports:
  - port: 80
  externalIPs:
  - 192.168.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: good-no-externalips
spec:
  selector:
    app: test
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: good-empty-externalips
spec:
  selector:
    app: test
  ports:
  - port: 80
  externalIPs: []
